--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_DB: nest
     networks:
       - civ-cornigliano
-  shadow-dev-db:
+  test-db:
     image: postgres:13
     ports:
       - 5435:5432
