--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123@localhost:5434/nest?schema=public"
+DATABASE_URL="postgresql://postgres:Civ2023@db:5432/civ?schema=public"
 
 JWT_SECRET='super-secret'
