--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:123@localhost:5435/nest?schema=public"
+DATABASE_URL="postgresql://postgres:123@Civ2023@db:5435/civ?schema=public"
 # SHADOW_DATABASE_URL="postgresql://postgres:123@localhost:5435/shadow_nest?schema=public"
 
 JWT_SECRET='super-secret'
